--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,20 +1,32 @@
 server {
-  listen       80;
-  server_name  example.journaldev.com;
-  root         /var/www/html/wordpress;
+    listen 80;
+    server_name localhost;
+    root /var/www/html;
 
-  access_log /var/log/nginx/example.journaldev.com-access.log;
-  error_log  /var/log/nginx/example.journaldev.com-error.log error;
-  index index.php index.html index.htm;
+    index index.php;
 
-  location / {
-    try_files $uri $uri/ /index.php$is_args$args;
-  }
+    location / {
+        try_files $uri $uri/ /index.php?$args;
+    }
 
-  location ~ \.php$ {
-    fastcgi_split_path_info ^(.+\.php)(/.+)$;
-    fastcgi_pass wordpress:9000;
-    fastcgi_index index.php;
-    include fastcgi.conf;
-  }
+    location ~ \.php$ {
+        include fastcgi_params;
+        fastcgi_pass wordpress:9000;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+    }
+
+    location = /favicon.ico {
+        log_not_found off;
+        access_log off;
+    }
+
+    location = /robots.txt {
+        allow all;
+        log_not_found off;
+        access_log off;
+    }
+
+    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
 }
