--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -4,19 +4,21 @@ services:
     build: ./requirements/mariadb
     container_name: mariadb_c
     volumes:
-      - ./requirements/mariadb/db:/var/lib/mysql
+      - mariadb_db:/var/lib/mysql
     environment:
       MARIADB_DATABASE: ${DB_NAME}
       MARIADB_ROOT_PASSWORD: ${ROOT_PASS}
       MARIADB_USER: ${DB_USER}
       MARIADB_PASSWORD: ${USER_PASS}
+    # networks:
+    #   - np
     restart: always
 
   wordpress:
     image: wordpress:php8.2-fpm-alpine
     container_name: wordpress
     volumes:
-      - ./requirements/wordpress/data:/var/www/html
+      - wordpress_db:/var/www/html
     depends_on:
       - db
     environment:
@@ -26,16 +28,35 @@ services:
       WORDPRESS_DB_USER: ${DB_USER}
       WORDPRESS_DB_PASSWORD: ${USER_PASS}
       WORDPRESS_TABLE_PREFIX: wp_
+    # networks:
+    #   - np
     restart: always
   
   nginx:
     build: ./requirements/nginx
     container_name: nginx_c
+    depends_on:
+      - wordpress
     volumes:
-      - ./requirements/wordpress/data:/var/www/html
+      - wordpress_db:/var/www/html
     ports:
       - "443:443"
     restart: always
-
+    # networks:
+    #   - np
+volumes:
+    mariadb_db:
+      driver_opts:
+        type: none
+        o: bind
+        device: /home/ubuntu/Desktop/Inception/srcs/requirements/mariadb/db     
+    wordpress_db:
+      driver_opts:
+        type: none
+        o: bind
+        device: /home/ubuntu/Desktop/Inception/srcs/requirements/wordpress/data
+# networks:
+#       np:
+#         driver: bridge
 
  
