--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update \
     && apt-get install openssl -y \
     && mkdir /etc/nginx/ssl \
     && openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/server.key -out /etc/ssl/certs/server.crt -subj "/C=mr/ST=State/L=City/O=Organization/CN=localhost" \
-    && openssl dhparam -out /etc/nginx/dhparam.pem 4096 \
+    # && openssl dhparam -out /etc/nginx/dhparam.pem 4096 \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
