Add: working on wordpress and fpm image. Update mariadb/conf to mariadb/tools

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -15,7 +15,7 @@ RUN sed -i 's/bind-address/bind-address = 0.0.0.0 #/i' /etc/mysql/mariadb.conf.d
 
 # WORKDIR /docker-intrepoint.d/
 
-COPY ./conf/setup.sh .
+COPY ./tools/setup.sh .
 
 RUN chmod +x setup.sh
 
