Update: wordpress and php-fpm works perfectly, some small tetches nedded

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,5 +1,21 @@
-DB_NAME=Wordpress
-ROOT_PASS=RootPass
-DB_USER=john
-USER_PASS=JohnPass
-WP_PREFIX=wp_
+# Mariadb ENV
+MARIADB_DATABASE=Wordpress
+MARIADB_ROOT_PASSWORD=RootPass
+MARIADB_USER=john
+MARIADB_PASSWORD=JohnPass
+
+# Wordpress ENV 
+WORDPRESS_DB_HOST=db
+WORDPRESS_ROOT_PASSWORD=RootPass
+WORDPRESS_DB_NAME=Wordpress
+WORDPRESS_DB_USER=john
+WORDPRESS_DB_PASSWORD=JohnPass
+WORDPRESS_TABLE_PREFIX=wp_
+
+# Wordpress website configuration
+
+WORDPRESS_SITE_URL=haitkadi.42.fr
+WORDPRESS_SITE_TITLE=WP-Blog
+WORDPRESS_SITE_ADMIN_USER=wpAdmin
+WORDPRESS_SITE_ADMIN_PASSWORD=Admin123!
+WORDPRESS_SITE_ADMIN_EMAIL=wpadmin@mail.com
