Update: adding some simple things. need to make env executed on nginx config file

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,3 +1,6 @@
+
+DOMAIN_NAME=mnaimi.42.fr
+
 # Mariadb ENV
 MARIADB_DATABASE=Wordpress
 MARIADB_ROOT_PASSWORD=RootPass
@@ -13,9 +16,12 @@ WORDPRESS_DB_PASSWORD=JohnPass
 WORDPRESS_TABLE_PREFIX=wp_
 
 # Wordpress website configuration
-
-WORDPRESS_SITE_URL=haitkadi.42.fr
 WORDPRESS_SITE_TITLE=WP-Blog
-WORDPRESS_SITE_ADMIN_USER=wpAdmin
-WORDPRESS_SITE_ADMIN_PASSWORD=Admin123!
-WORDPRESS_SITE_ADMIN_EMAIL=wpadmin@mail.com
+#   ADMIN user
+WORDPRESS_SITE_ADMIN_USER=Owner
+WORDPRESS_SITE_ADMIN_PASSWORD=passPass123!
+WORDPRESS_SITE_ADMIN_EMAIL=owner@mail.com
+#   REGULAR user
+WORDPRESS_SITE_USER=Bob
+WORDPRESS_SITE_USER_PASSWORD=BobPass
+WORDPRESS_SITE_USER_EMAIL=BobPass@mail.com
