--- a/srcs/requirements/nginx/conf/my-site.conf.template
+++ b/srcs/requirements/nginx/conf/my-site.conf.template
@@ -3,10 +3,9 @@ server {
 
     listen  80;
     listen [::]:80;
-    server_name haitkadi.42.fr www.haitkadi.42.fr;
+    server_name ${DOMAIN_NAME} www.${DOMAIN_NAME};
     return 301 https://$server_name$request_uri;
 }
-
 
 
 server {
@@ -19,7 +18,6 @@ server {
 
     ssl_protocols TLSv1.3;
     ssl_prefer_server_ciphers on;
-    # ssl_dhparam /etc/nginx/dhparam.pem;
     ssl_ciphers EECDH+AESGCM:EDH+AESGCM;
     ssl_ecdh_curve secp384r1;
     ssl_session_timeout  10m;
@@ -39,7 +37,7 @@ server {
     root /var/www/html;
     index index.php;
 
-    server_name haitkadi.42.fr www.haitkadi.42.fr;
+    server_name ${DOMAIN_NAME} www.${DOMAIN_NAME};
 
     location / {
         try_files $uri $uri/ /index.php?$args;
