Update mandatory done

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,5 +1,5 @@
 
-DOMAIN_NAME=mnaimi.42.fr
+DOMAIN_NAME=example.42.fr
 
 # Mariadb ENV
 MARIADB_DATABASE=Wordpress
@@ -8,12 +8,12 @@ MARIADB_USER=john
 MARIADB_PASSWORD=JohnPass
 
 # Wordpress ENV 
-WORDPRESS_DB_HOST=db
+WORDPRESS_DB_HOST=mariadb
 WORDPRESS_ROOT_PASSWORD=RootPass
 WORDPRESS_DB_NAME=Wordpress
 WORDPRESS_DB_USER=john
 WORDPRESS_DB_PASSWORD=JohnPass
-WORDPRESS_TABLE_PREFIX=wp_
+WORDPRESS_TABLE_PREFIX=ft_
 
 # Wordpress website configuration
 WORDPRESS_SITE_TITLE=WP-Blog
