--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -11,11 +11,12 @@ RUN apt-get update \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 COPY ./conf/ /etc/nginx/conf.d/
-COPY ./tools/ setup.d
-RUN chmod +x /setup.d/setup.sh
+COPY ./tools/ entrypoint.d
+RUN chmod +x /entrypoint.d/setup.sh
 
 EXPOSE 443 80
+ENTRYPOINT ["/entrypoint.d/setup.sh"]
 
-CMD ["/setup.d/setup.sh"]
+CMD ["nginx", "-g", "daemon off;"]
 
 
