Add: ftp service added, some more bugs need to be fixed

--- a/srcs/.env
+++ b/srcs/.env
@@ -25,3 +25,7 @@ WORDPRESS_SITE_ADMIN_EMAIL=owner@mail.com
 WORDPRESS_SITE_USER=Bob
 WORDPRESS_SITE_USER_PASSWORD=BobPass
 WORDPRESS_SITE_USER_EMAIL=BobPass@mail.com
+
+# FTP STUFF
+FTP_USER=bob
+FTP_PASS=bob123
