--- a/srcs/requirements/bonus/ftp/conf/vsfdpd.conf
+++ b/srcs/requirements/bonus/ftp/conf/vsfdpd.conf
@@ -10,5 +10,10 @@ listen_address=0.0.0.0
 pasv_enable=YES
 pasv_address=0.0.0.0
 pasv_addr_resolve=YES
-pasv_min_port=40000
-pasv_max_port=50000
+pasv_min_port=1025
+pasv_max_port=2025
+userlist_enable=YES
+userlist_file=/etc/vsftpd.userlist
+# NO - anyone can log in with an anonymous account.
+# YES - the user will be denied to login when their name exists in this file. 
+userlist_deny=NO
