srcs/requirements/bonus/ftp/conf/vsfdpd.conf

--- a/srcs/requirements/bonus/ftp/Dockerfile
+++ b/srcs/requirements/bonus/ftp/Dockerfile
@@ -2,13 +2,13 @@ FROM debian:buster
 
 RUN apt-get update && apt-get install -y vsftpd db-util db5.3-util
 
-COPY ./conf /etc/
+# COPY ./conf /etc/
 
 COPY ./tools/setup.sh /entrypoint.d/
 
 RUN chmod +x /entrypoint.d/setup.sh
 
-EXPOSE 20 21 1025-2025
+EXPOSE 20 21 1024-1048
 
 ENTRYPOINT [ "/entrypoint.d/setup.sh" ]
 
