--- a/srcs/requirements/bonus/ftp/Dockerfile
+++ b/srcs/requirements/bonus/ftp/Dockerfile
@@ -1,14 +1,14 @@
 FROM debian:buster
 
-RUN apt-get update && apt-get install -y vsftpd db-util db5.3-util
+RUN apt-get update && apt-get install -y vsftpd
 
-# COPY ./conf /etc/
+COPY ./conf/vsftpd.conf /etc/
 
 COPY ./tools/setup.sh /entrypoint.d/
 
 RUN chmod +x /entrypoint.d/setup.sh
 
-EXPOSE 20 21 1024-1048
+EXPOSE 20 21 40000-40005
 
 ENTRYPOINT [ "/entrypoint.d/setup.sh" ]
 
